add shell path